--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -256,10 +256,16 @@ section{
 	font-size: 16px;
 }
 
-.portofolio-content, .blog-content{
+.portofolio-content{
 	align-items: center;
 	text-align: center;
-	padding: 32px 0 96px 0;
+	padding: 32px 0 144px 0;
+}
+
+.blog-content{
+	align-items: center;
+	text-align: center;
+	padding: 96px 0 96px 0;
 }
 
 .portofolio h1{
@@ -331,18 +337,115 @@ section{
 	font-size: 16px;
 }
 
-.portofolio-content, .blog-content{
+.team-content{
 	align-items: center;
 	text-align: center;
-	padding: 32px 0 96px 0;
+	padding: 124px 0 144px 0;
 }
 
 .team h1{
 	font-size: 32px;
 	text-align: center;
 	color: #ffffff;
-	margin-bottom: 8px;
+	margin-bottom: 96px;
 }
+
+.team h3{
+	font-size: 20px;
+	color: #ffffff;
+	margin-bottom: 2px;
+}
+
+.team p{
+	font-size: 16px;
+	color: #9698ae;
+	margin-bottom: 6px;
+}
+
+.my-team{
+	display: flex;
+}
+
+.team-list{
+	margin: 0 auto;
+}
+
+.team-desc{
+	text-align: center;
+}
+
+.team-pic{
+	background: #e3e3e3;
+	height: 160px;
+	width: 160px;
+	border-radius: 50%;
+	overflow: hidden;
+	margin-bottom: 16px;
+}
+
+.team-pic img{
+	position: relative;
+	left: -100px;
+	top: 2px;
+	width: 360px;
+}
+
+.contact-content{
+	align-items: center;
+	text-align: center;
+	padding: 96px 0 144px 0;
+	margin: 0 auto;
+	max-width: 720px;
+}
+
+.contact h1{
+	font-size: 32px;
+	text-align: center;
+	color: #ffffff;
+	margin-bottom: 96px;
+}
+
+.form-contact{
+	overflow: hidden;
+	text-align: left;
+	background: #9698ae;
+	border-radius: 8px;
+	padding: 8px 16px;
+	margin-bottom: 16px;
+	cursor: text;
+}
+
+.form-contact label{
+	display: block;
+	width: 100%;
+	font-size: 14px;
+	margin-bottom: 4px;
+	color: #343848;
+	cursor: text;
+}
+
+.form-contact input{
+	display: block;
+	width: 100%;
+	height: 24px;
+	background: inherit;
+	outline: none;
+	color: #282b38;
+	font-size: 16px;
+	margin-bottom: 4px;
+}
+
+.form-contact textarea{
+	display: block;
+	width: 100%;
+	background: inherit;
+	outline: none;
+	color: #282b38;
+	font-size: 16px;
+	margin-bottom: 4px;
+}
+
+
 
 
 
