--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,20 +45,24 @@ body{
 
 .menu2{
 	display: none;
-	background: #17252a;
+	background: #343848;
 }
 
 .menu2 li{
-	display: block;
-	padding: 25px 24px;
+	display: flex;
+	padding: 0 16px;
+	width: 100%;
 }
 
 .menu2 a{
 	color: #feffff;
+	padding-top: 14px;
+	height: 40px;
+	width: 100%;
 }
 
 .menu2 li:hover{
-	background: #3aafa9;
+	background: #00cc8f;
 	cursor: pointer;
 }
 
@@ -83,31 +87,30 @@ body{
 }
 
 .menu-item a:hover{
-	color: #feffff;
-	background: #3aafa9;
+	color: #00cc8f;
 }
 
 .menu-icon {
-	padding: 17px;
+	padding: 20px 0;
 	cursor: pointer;
 	display: none;
 }
 
 .icon {
-	width: 36px;
+	width: 32px;
 	height: 4px;
-	background: #17252a;
+	background: #ffffff;
 	margin: 4px 0;
 }
 
 .menu-icon:hover > .icon {
-	background: #3aafa9;
+	background: #00cc8f;
 }
 
 section{
 	max-width: 1120px;
 	margin: 0 auto 16px auto;
-	padding: 70px 0 16px 16px;
+	padding: 70px 16 16px 16px;
 }
 
 .home-content{
@@ -393,7 +396,7 @@ section{
 .contact-content{
 	align-items: center;
 	text-align: center;
-	padding: 96px 0 144px 0;
+	padding: 72px 0 48px 0;
 	margin: 0 auto;
 	max-width: 720px;
 }
@@ -445,90 +448,151 @@ section{
 	margin-bottom: 4px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 .footer{
-	bottom: 0;
 	width: 100%;
-	height: 16px;
-	padding: 16px 0;
-	background: #17252a;
-	color: #feffff;
-	font-size: 10px;
-	text-align: center;
+	background: #00cc8f;
+	padding: 72px 0 32px 0;
 }
+
+.footer h3{
+	text-align: center;
+	font-size: 14px;
+	font-weight: normal;
+	color: #282b38;
+}
+
+.footer span{
+	font-weight: 500;
+	color: #343848;
+}
+
+.active-link{
+	color: #00cc8f;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .show-menu{
 	display: block;
 }
 
-@media (max-width: 767px) {
-	.menu-icon{
-		display: block;
-	}
+@media screen and (max-width: 350px){
+
 	.menu-link{
 		display: none;
 	}
-	.head-content{
+
+	.menu-icon{
 		display: block;
 	}
-	.left-head , .right-head{
+
+	.home-content{
+		display: flex;
+		flex-direction: column-reverse;
+		padding: 96px 6px 120px 6px;
+	}
+
+	.home-pic img{
+		width: 280px;
+		margin-bottom: 40px;
+	}
+
+	.home-data{
 		display: block;
-		min-width: none;
-		margin: 0 16px;
-		padding: 0;
-	}
-	.right-head{
-		margin-top: 24px;
-	}
-	.profil{
-		display: block;
-		margin: 0;
-	}
-	.contact{
-		margin-right: auto;
-	}
-	.resume{
-		margin-left: auto;
-	}
-	.line{
-		display: none;
-	}
-	.foto, .nama{
-		display: block;
-		margin-bottom: 16px;
-		margin-left: auto;
-		margin-right: auto;
 		text-align: center;
 	}
-	.right-head table{
-		margin: 0 auto;
-	}
-}
 
-@media (min-width: 768px) {
-	.menu2{
+	.home-data h1{
+		font-size: 40px;
+	}
+
+	.home-data h3{
+		font-size: 20px;
+	}
+
+	.home-data p{
+		font-size: 14px;
+	}
+
+	.home-data a{
+		margin-left: auto;
+		margin-right: auto;
+	}
+
+	.home .scroll-down{
 		display: none;
 	}
+
+	.about-content{
+		padding: 104px 6px;
+	}
+
+	.about-content p{
+		font-size: 14px;
+		padding: 0 8px;
+	}
+
+	.about h1{
+		margin-bottom: 40px;
+	}
+
+	.about-pic{
+		margin-left: auto;
+		margin-right: auto;
+		width: 280px;
+		height: 200px;
+		margin-bottom: 40px;
+	}
+
+	.about-pic img{
+		width: 380px;
+	}
+
+	.about-me{
+		display: block;
+		padding: 0;
+		align-items: center;
+		text-align: center;
+	}
+
+	.about-exp{
+		padding-left: 8px;
+		align-items: center;
+		grid-template-columns: 35% 30% 35%;
+	}
+
+	.exp h1{
+		font-size: 28px;
+		margin-bottom: 12px;
+	}
+
+	.exp p{
+		font-size: 12px;
+	}
+
+
+
 }
 
 
